mobile menu trigger fixed when not visible

--- a/src/css/layout/_layout.scss
+++ b/src/css/layout/_layout.scss
@@ -599,8 +599,12 @@ a {
 	transition: all 0.6s ease;
 
 	&__trigger {
-		width: 50px;
-		height: 50px;
+		// width: 50px;
+		// height: 50px;
+		width: 0;
+		height: 0;
+
+
 		background-color: $red;
 		position: fixed;
 		bottom: 8%;
@@ -663,6 +667,11 @@ a {
 
 	&.visible {
 		opacity: 1;
+
+		.mobileMenu__trigger {
+			width: 50px;
+			height: 50px;			
+		}
 	}
 	
 	@media (min-width: 600px) {
